Closed Bug 147672 Opened 23 years ago Closed 23 years ago

Crash installing langpacks

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mkaply, Assigned: dveditz)

References

Details

(Whiteboard: [adt1 rtm])

Attachments

(1 file)

We are getting crashes installing langpacks on RC3 on OS/2. We traced it down to an XP issue: http://lxr.mozilla.org/mozilla1.0/source/xpinstall/src/nsInstall.cpp#2837 This is freeing an nsString buffer. It should not be there.
Over to Darin, this is a result of the nsIFile landing. Other suspicious spots (diff shows a char* -> nsCAutoString change but no getting rid of free) might be nsLoggingProgressNotifier.cpp nsSoftwareUpdate.cpp nsInstallPatch.cpp nsInstallFileOpItem.cpp nsDownloadManager.cpp nsDownloadProxy.cpp nsFilePicker.cpp (beos) xcDll.cpp (need to double check m_registrylocation and m_dllName frees) nsDiskCacheDevice.cpp There were other places that fit this pattern but actually fixed leaks leftover from a botched nsFileSpec ->nsIFile conversion; it's possible some of the above are OK too, I only looked at what little context was available in the diffs. I didn't look at the mailnews diffs.
Assignee: dveditz → darin
Keywords: mozilla1.0, nsbeta1+
OK, the mozilla folks are trying to push this release out and I can't reach Darin. Taking back
Assignee: darin → dveditz
I went through the files in comment 1 and I didn't see any double-frees, although I didn't go through xcDll.cpp carefully enough. From looking at the nsFileSpec code, I think the comment in nsLoggingProgressNotifier.cpp is wrong, although I'm not sure.
All the other spots were OK -- most turned out to be leaks that Darin fixed (sometimes leaks leftover from an nsFileSpec->nsIFile conversion, but many times in newer files due to lameness).
Comment on attachment 85311 [details] [diff] [review] fix for the nsInstall.cpp crash r=dbaron
Attachment #85311 - Flags: review+
Comment on attachment 85311 [details] [diff] [review] fix for the nsInstall.cpp crash sr=shaver. Thanks for the detective work.
Attachment #85311 - Flags: superreview+
Comment on attachment 85311 [details] [diff] [review] fix for the nsInstall.cpp crash a=valeski,rjesup,scc
Attachment #85311 - Flags: approval+
This is branch-only, the trunk was fine. Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 147485 has been marked as a duplicate of this bug. ***
adding adt1.0.0+ for checkin to the 1.0 branch. Please get drivers approval and then check it in and mark it fixed1.0.0
Keywords: adt1.0.0+
Whiteboard: [adt1 rtm]
looks like this was checked in on the branch so adding fixed1.0.0
Keywords: fixed1.0.0
Michael Kaply, can you confirm that this fix allows you to install langpacks on OS/2 without crashing? Thanks.
*** Bug 148708 has been marked as a duplicate of this bug. ***
Adding keyword verified1.0.1 for Verified on BRANCH. Marking status as VERIFIED since this was not a problem on TRUNK from comment #9.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: