fix crash installing language packs bug 147672. r=dbaron,sr=shaver,a=valeski/scc/wjesup